# dotfiles.nix

./: README.org  flake.nix  module.nix
nyxt/: nyxt.lisp
xmonad/: nixmonad.cabal  xmobarrc.hs  xmonad.hs
