name:                nixmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable xmonad
  main-is:             xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , X11 >= 1.8
                     , X11-xft >= 0.3
                     , containers
  -- hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -threaded